src/bootstrap/src/core/builder/cli_paths/snapshots/x_test_skip_tests_etc.snap
---
source: src/bootstrap/src/core/builder/cli_paths/tests.rs
assertion_line: 68
expression: test --skip=tests --skip=coverage-map --skip=coverage-run --skip=library --skip=tidyselftest
---
[Test] test::Tidy
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::src/tools/tidy})
[Test] test::CodegenCranelift
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::compiler/c_codegen_cranelift})
[Test] test::CodegenGCC
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::compiler/c_codegen_gcc})
[Test] test::CrateLibc
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::compiler})
    - Set({test::compiler/c})
    - Set({test::compiler/c_abi})
    - Set({test::compiler/c_arena})
    - Set({test::compiler/c_ast})
    - Set({test::compiler/c_ast_ir})
    - Set({test::compiler/c_ast_lowering})
    - Set({test::compiler/c_ast_passes})
    - Set({test::compiler/c_ast_pretty})
    - Set({test::compiler/c_attr_parsing})
    - Set({test::compiler/c_baked_icu_data})
    - Set({test::compiler/c_borrowck})
    - Set({test::compiler/c_builtin_macros})
    - Set({test::compiler/c_codegen_llvm})
    - Set({test::compiler/c_codegen_ssa})
    - Set({test::compiler/c_const_eval})
    - Set({test::compiler/c_data_structures})
    - Set({test::compiler/c_driver})
    - Set({test::compiler/c_driver_impl})
    - Set({test::compiler/c_error_codes})
    - Set({test::compiler/c_error_messages})
    - Set({test::compiler/c_errors})
    - Set({test::compiler/c_expand})
    - Set({test::compiler/c_feature})
    - Set({test::compiler/c_fluent_macro})
    - Set({test::compiler/c_fs_util})
    - Set({test::compiler/c_graphviz})
    - Set({test::compiler/c_hashes})
    - Set({test::compiler/c_hir})
    - Set({test::compiler/c_hir_analysis})
    - Set({test::compiler/c_hir_id})
    - Set({test::compiler/c_hir_pretty})
    - Set({test::compiler/c_hir_typeck})
    - Set({test::compiler/c_incremental})
    - Set({test::compiler/c_index})
    - Set({test::compiler/c_index_macros})
    - Set({test::compiler/c_infer})
    - Set({test::compiler/c_interface})
    - Set({test::compiler/c_lexer})
    - Set({test::compiler/c_lint})
    - Set({test::compiler/c_lint_defs})
    - Set({test::compiler/c_llvm})
    - Set({test::compiler/c_log})
    - Set({test::compiler/c_macros})
    - Set({test::compiler/c_metadata})
    - Set({test::compiler/c_middle})
    - Set({test::compiler/c_mir_build})
    - Set({test::compiler/c_mir_dataflow})
    - Set({test::compiler/c_mir_transform})
    - Set({test::compiler/c_monomorphize})
    - Set({test::compiler/c_next_trait_solver})
    - Set({test::compiler/c_parse})
    - Set({test::compiler/c_parse_format})
    - Set({test::compiler/c_passes})
    - Set({test::compiler/c_pattern_analysis})
    - Set({test::compiler/c_privacy})
    - Set({test::compiler/c_proc_macro})
    - Set({test::compiler/c_public})
    - Set({test::compiler/c_public_bridge})
    - Set({test::compiler/c_query_impl})
    - Set({test::compiler/c_query_system})
    - Set({test::compiler/c_resolve})
    - Set({test::compiler/c_sanitizers})
    - Set({test::compiler/c_serialize})
    - Set({test::compiler/c_session})
    - Set({test::compiler/c_span})
    - Set({test::compiler/c_symbol_mangling})
    - Set({test::compiler/c_target})
    - Set({test::compiler/c_thread_pool})
    - Set({test::compiler/c_trait_selection})
    - Set({test::compiler/c_traits})
    - Set({test::compiler/c_transmute})
    - Set({test::compiler/c_ty_utils})
    - Set({test::compiler/c_type_ir})
    - Set({test::compiler/c_type_ir_macros})
    - Set({test::compiler/c_windows_rc})
[Test] test::Cratedoc
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::src/libdoc, test::src/tools/doc})
[Test] test::CratedocJsonTypes
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::src/doc-json-types})
[Test] test::CrateBootstrap
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::src/tools/coverage-dump})
    - Set({test::src/tools/jsondoclint})
    - Set({test::src/tools/replace-version-placeholder})
[Test] test::RemoteTestClientTests
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::src/tools/remote-test-client})
[Test] test::Linkcheck
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::src/tools/linkchecker})
[Test] test::TierCheck
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::src/tools/tier-check})
[Test] test::Analyzer
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::src/tools/-analyzer})
[Test] test::ErrorIndex
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::error-index})
    - Set({test::src/tools/error_index_generator})
[Test] test::docBook
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::src/doc/doc})
[Test] test::UnstableBook
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::src/doc/unstable-book})
[Test] test::cBook
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::src/doc/c})
[Test] test::docTheme
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::src/tools/doc-themes})
[Test] test::HtmlCheck
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::src/tools/html-checker})
[Test] test::Installer
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::src/tools/-installer})
[Test] test::TestFloatParse
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::src/tools/test-float-parse})
