src/bootstrap/src/core/builder/cli_paths/snapshots/x_test_tests.snap
---
source: src/bootstrap/src/core/builder/cli_paths/tests.rs
expression: test tests
---
[Test] test::AssemblyLlvm
    targets: [aarch64-unknown-linux-gnu]
    - Suite(test::tests/assembly-llvm)
[Test] test::CodegenLlvm
    targets: [aarch64-unknown-linux-gnu]
    - Suite(test::tests/codegen-llvm)
[Test] test::CodegenUnits
    targets: [aarch64-unknown-linux-gnu]
    - Suite(test::tests/codegen-units)
[Test] test::Coverage
    targets: [aarch64-unknown-linux-gnu]
    - Suite(test::tests/coverage)
[Test] test::CoverageRundoc
    targets: [x86_64-unknown-linux-gnu]
    - Suite(test::tests/coverage-run-doc)
[Test] test::Crashes
    targets: [aarch64-unknown-linux-gnu]
    - Suite(test::tests/crashes)
[Test] test::Debuginfo
    targets: [aarch64-unknown-linux-gnu]
    - Suite(test::tests/debuginfo)
[Test] test::Incremental
    targets: [aarch64-unknown-linux-gnu]
    - Suite(test::tests/incremental)
[Test] test::MirOpt
    targets: [aarch64-unknown-linux-gnu]
    - Suite(test::tests/mir-opt)
[Test] test::Pretty
    targets: [x86_64-unknown-linux-gnu]
    - Suite(test::tests/pretty)
[Test] test::RunMake
    targets: [aarch64-unknown-linux-gnu]
    - Suite(test::tests/run-make)
[Test] test::RunMakeCargo
    targets: [aarch64-unknown-linux-gnu]
    - Suite(test::tests/run-make-cargo)
[Test] test::doc
    targets: [x86_64-unknown-linux-gnu]
    - Suite(test::tests/doc)
[Test] test::docGUI
    targets: [x86_64-unknown-linux-gnu]
    - Suite(test::tests/doc-gui)
[Test] test::docJSNotStd
    targets: [x86_64-unknown-linux-gnu]
    - Suite(test::tests/doc-js)
[Test] test::docJSStd
    targets: [x86_64-unknown-linux-gnu]
    - Suite(test::tests/doc-js-std)
[Test] test::docJson
    targets: [x86_64-unknown-linux-gnu]
    - Suite(test::tests/doc-json)
[Test] test::docUi
    targets: [x86_64-unknown-linux-gnu]
    - Suite(test::tests/doc-ui)
[Test] test::Ui
    targets: [aarch64-unknown-linux-gnu]
    - Suite(test::tests/ui)
[Test] test::UiFullDeps
    targets: [x86_64-unknown-linux-gnu]
    - Suite(test::tests/ui-fulldeps)
